--- a/index.html
+++ b/index.html
@@ -3,99 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Portfolio</title>
+    <title>KWIN City - Student Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <h1>Welcome to KWIN City</h1>
-        <p>Your gateway to knowledge, innovation, and well-being.</p>
-    </header>
-
-    <section>
-        <h2>City Map</h2>
-        <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
-        <div class="map-container">
-            <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
-        </div>
-    </section>
-
-    <section>
-        <h2>Course Highlights</h2>
-        <button class="button" onclick="toggleCourseDetails()">Course Introduction</button>
-        <div id="course-details" style="display:none; margin-top: 20px; padding: 15px; background-color: #222; border-radius: 8px;">
-            <h3>Course Introduction</h3>
-            <p><strong>Design and Analysis of Algorithms</strong> taught us how to solve problems efficiently using algorithms. The course helps us understand how to design solutions to problems, analyze their performance, and make sure they work well in real-world applications.</p>
-
-            <h4>Data Structures and Algorithms We Studied:</h4>
-            <ul>
-                <li><strong>Binary Search Trees (BST)</strong>: Used to organize data for quick searching in a hierarchy.</li>
-                <li><strong>AVL Trees</strong>: A balanced version of BSTs, ensuring faster searches.</li>
-                <li><strong>Red-Black Trees</strong>: A self-balancing binary search tree for quick operations and data retrieval.</li>
-                <li><strong>2-3 Trees</strong>: A balanced search tree that helps store and retrieve data efficiently.</li>
-            </ul>
-
-            <p>For each of these topics, we focused on understanding both the theory and practical usage, helping us apply the concepts effectively in real-world situations.</p>
-
-            <h4>Connecting the Course with Real-Time Applications:</h4>
-            <p>Algorithms are used in many things we use every day, such as search engines, social media, and GPS systems. This course helped us understand the logic behind these technologies:</p>
-            <ul>
-                <li><strong>Search Algorithms in Everyday Use</strong>: We saw how algorithms like Depth-First Search (DFS) and Breadth-First Search (BFS) are essential for exploring connections in networks. For example, DFS can find all possible paths between two friends on social media, while BFS finds the quickest path.</li>
-                <li><strong>Managing Large Data in Databases</strong>: We learned how AVL and Red-Black Trees help organize data efficiently in databases, making it quicker to search through millions of records. We also studied how heaps organize data in a way that speeds up data retrieval.</li>
-            </ul>
-        </div>
-    </section>
-
-    <section>
-        <h2>About KWIN City</h2>
-        <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation.</p>
-        <ul>
-            <li>Eco-friendly and people-centric design.</li>
-            <li>Focus on collaboration and coexistence.</li>
-            <li>Empowering residents through technology and innovation.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Strategic Location</h2>
-        <p>KWIN City is conveniently located:</p>
-        <ul>
-            <li>45 minutes from Kempegowda International Airport.</li>
-            <li>Connected via major highways and rail routes.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Team Members</h2>
-        <ul>
-            <li>Vishal U Hosur</li>
-            <li>Varun S Terdal</li>
-            <li>Suleman A</li>
-            <li>Saif Ali</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Smart City Project</h2>
-        <p>Suryakshetra: A well-planned urban smart city in Gujarat that balances growth, sustainability, and livability.</p>
-        <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
-    </footer>
-
     <script>
-        // JavaScript to toggle the course details
-        function toggleCourseDetails() {
-            var courseDetails = document.getElementById("course-details");
-            if (courseDetails.style.display === "none") {
-                courseDetails.style.display = "block";
+        // Function to toggle the visibility of additional sections
+        function toggleInfo(id) {
+            var section = document.getElementById(id);
+            if (section.style.display === "none" || section.style.display === "") {
+                section.style.display = "block";
             } else {
-                courseDetails.style.display = "none";
+                section.style.display = "none";
             }
         }
     </script>
+</head>
+<body>
+
+<header>
+    <h1>Welcome to KWIN City</h1>
+    <p>Your gateway to knowledge, innovation, and well-being.</p>
+</header>
+
+<section id="city-map">
+    <h2>City Map</h2>
+    <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
+    <div class="map-container">
+        <img src="C:\Users\varun\OneDrive\图片\Screenshots\Screenshot 2024-12-26 114240.png" alt="KWIN City Map">
+    </div>
+</section>
+
+<section>
+    <h2>Course Highlights</h2>
+    <dl>
+        <dt>Course Name</dt>
+        <dd>Design and Analysis of Algorithms</dd>
+
+        <dt>Course Code</dt>
+        <dd>24ECAC203</dd>
+
+        <dt>Instructor</dt>
+        <dd>KMMR</dd>
+
+        <dt>University</dt>
+        <dd>KLE Technological University</dd>
+    </dl>
+</section>
+
+<section>
+    <h2>Team Members</h2>
+    <ul>
+        <li>Vishal U Hosur</li>
+        <li>Varun S Terdal</li>
+        <li>Suleman A</li>
+        <li>Saif Ali</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Smart City Project</h2>
+    <p>Suryakshetra: A well-planned urban smart city in Gujarat that balances growth, sustainability, and livability.</p>
+    <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
+</section>
+
+<!-- Button to show more info -->
+<button class="button" onclick="toggleInfo('about-kwin')">More Info</button>
+
+<!-- Hidden sections to toggle -->
+<section id="about-kwin" style="display:none;">
+    <h2>About KWIN City</h2>
+    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation.</p>
+    <ul>
+        <li>Eco-friendly and people-centric design.</li>
+        <li>Focus on collaboration and coexistence.</li>
+        <li>Empowering residents through technology and innovation.</li>
+    </ul>
+</section>
+
+<section id="strategic-location" style="display:none;">
+    <h2>Strategic Location</h2>
+    <p>KWIN City is conveniently located:</p>
+    <ul>
+        <li>45 minutes from Kempegowda International Airport.</li>
+        <li>Connected via major highways and rail routes.</li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
+</footer>
+
 </body>
 </html>
