--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <!-- Button to show more info -->
 <button class="button" onclick="toggleInfo('course-introduction')">Course Introduction</button>
 <button class="button" onclick="toggleInfo('about-kwin')">More Info</button>
+<button class="button" onclick="toggleInfo('strategic-location')">Strategic Location</button>
 
 <!-- Hidden sections to toggle -->
 <section id="course-introduction" style="display:none;">
