--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
 </section>
 
 <!-- Button to show more info -->
-<button class="button" onclick="toggleInfo('course-introduction')">Course Introduction</button>
-<button class="button" onclick="toggleInfo('about-kwin')">More Info</button>
-<button class="button" onclick="toggleInfo('strategic-location')">Strategic Location</button>
+<button class="button" onclick="toggleInfo('more-info')">More Info</button>
 
 <!-- Hidden sections to toggle -->
-<section id="course-introduction" style="display:none;">
+<section id="more-info" style="display:none;">
     <h2>Course Introduction</h2>
     <p>Design and Analysis of Algorithms course helped us to learn how to solve problems that are seen around us in smart and efficient ways. It focuses on how to design algorithms for different problems and how to make sure that the provided solutions work well and quickly. Starting with basic ideas and moving to advanced concepts, the course helps us understand, analyze, and create algorithms that are both correct and fast.</p>
     
@@ -93,25 +91,12 @@
     
     <h4>Managing Huge Amounts of Data in Filesystems:</h4>
     <p>AVL and Red-Black Trees ensure data is organized for quick access in systems like databases, which must efficiently retrieve records among millions. We also saw how heaps are used to arrange the data more efficiently and retrieve it from databases.</p>
-</section>
 
-<section id="about-kwin" style="display:none;">
     <h2>About KWIN City</h2>
-    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation.</p>
-    <ul>
-        <li>Eco-friendly and people-centric design.</li>
-        <li>Focus on collaboration and coexistence.</li>
-        <li>Empowering residents through technology and innovation.</li>
-    </ul>
-</section>
+    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
 
-<section id="strategic-location" style="display:none;">
     <h2>Strategic Location</h2>
-    <p>KWIN City is conveniently located:</p>
-    <ul>
-        <li>45 minutes from Kempegowda International Airport.</li>
-        <li>Connected via major highways and rail routes.</li>
-    </ul>
+    <p>KWIN City enjoys a prime location that makes it an ideal hub for growth and development. It is conveniently located just 45 minutes away from Kempegowda International Airport, providing easy access for international travelers and business ventures. Moreover, KWIN City is well-connected via major highways and rail routes, ensuring seamless transportation and connectivity to other parts of the region and beyond. This strategic location enhances both its accessibility and its potential for future economic and technological growth.</p>
 </section>
 
 <footer>
