--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
     <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
 </section>
 
-<!-- Button to show more info -->
-<button class="button" onclick="toggleInfo('more-info')">More Info</button>
+<!-- Buttons to show more info -->
+<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
+<button class="button" onclick="toggleInfo('about-kwin')">More Info</button>
 
 <!-- Hidden sections to toggle -->
-<section id="more-info" style="display:none;">
+<section id="course-intro" style="display:none;">
     <h2>Course Introduction</h2>
     <p>Design and Analysis of Algorithms course helped us to learn how to solve problems that are seen around us in smart and efficient ways. It focuses on how to design algorithms for different problems and how to make sure that the provided solutions work well and quickly. Starting with basic ideas and moving to advanced concepts, the course helps us understand, analyze, and create algorithms that are both correct and fast.</p>
     
@@ -91,7 +92,9 @@
     
     <h4>Managing Huge Amounts of Data in Filesystems:</h4>
     <p>AVL and Red-Black Trees ensure data is organized for quick access in systems like databases, which must efficiently retrieve records among millions. We also saw how heaps are used to arrange the data more efficiently and retrieve it from databases.</p>
+</section>
 
+<section id="about-kwin" style="display:none;">
     <h2>About KWIN City</h2>
     <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
 
