--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     <p>Your gateway to knowledge, innovation, and well-being.</p>
 </header>
 
-<!-- Course Introduction Section moved to the top -->
-<section>
+<!-- Buttons to show more info -->
+<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
+<button class="button" onclick="toggleInfo('about-kwin')">More Info</button>
+
+<!-- Course Introduction Section -->
+<section id="course-intro" style="display:none;">
     <h2>Course Introduction</h2>
     <p>Design and Analysis of Algorithms course helped us to learn how to solve problems that are seen around us in smart and efficient ways. It focuses on how to design algorithms for different problems and how to make sure that the provided solutions work well and quickly. Starting with basic ideas and moving to advanced concepts, the course helps us understand, analyze, and create algorithms that are both correct and fast.</p>
     
@@ -49,11 +53,7 @@
     <p>AVL and Red-Black Trees ensure data is organized for quick access in systems like databases, which must efficiently retrieve records among millions. We also saw how heaps are used to arrange the data more efficiently and retrieve it from databases.</p>
 </section>
 
-<!-- Buttons to show more info -->
-<button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
-<button class="button" onclick="toggleInfo('about-kwin')">More Info</button>
-
-<!-- Hidden sections to toggle -->
+<!-- About KWIN City and Strategic Location Section (More Info) -->
 <section id="about-kwin" style="display:none;">
     <h2>About KWIN City</h2>
     <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
