--- a/index.html
+++ b/index.html
@@ -53,15 +53,7 @@
     <p>AVL and Red-Black Trees ensure data is organized for quick access in systems like databases, which must efficiently retrieve records among millions. We also saw how heaps are used to arrange the data more efficiently and retrieve it from databases.</p>
 </section>
 
-<!-- About KWIN City and Strategic Location Section (More Info) -->
-<section id="about-kwin" style="display:none;">
-    <h2>About KWIN City</h2>
-    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
-
-    <h2>Strategic Location</h2>
-    <p>KWIN City enjoys a prime location that makes it an ideal hub for growth and development. It is conveniently located just 45 minutes away from Kempegowda International Airport, providing easy access for international travelers and business ventures. Moreover, KWIN City is well-connected via major highways and rail routes, ensuring seamless transportation and connectivity to other parts of the region and beyond. This strategic location enhances both its accessibility and its potential for future economic and technological growth.</p>
-</section>
-
+<!-- City Map Section -->
 <section id="city-map">
     <h2>City Map</h2>
     <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
@@ -70,6 +62,7 @@
     </div>
 </section>
 
+<!-- Course Highlights Section -->
 <section>
     <h2>Course Highlights</h2>
     <dl>
@@ -87,6 +80,7 @@
     </dl>
 </section>
 
+<!-- Team Members Section -->
 <section>
     <h2>Team Members</h2>
     <ul>
@@ -97,10 +91,13 @@
     </ul>
 </section>
 
-<section>
-    <h2>Smart City Project</h2>
-    <p>Suryakshetra: A well-planned urban smart city in Gujarat that balances growth, sustainability, and livability.</p>
-    <blockquote>"Alone we can do so little; together we can do so much." — Helen Keller</blockquote>
+<!-- More Info Section (About KWIN City and Strategic Location) -->
+<section id="about-kwin" style="display:none;">
+    <h2>About KWIN City</h2>
+    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
+
+    <h2>Strategic Location</h2>
+    <p>KWIN City enjoys a prime location that makes it an ideal hub for growth and development. It is conveniently located just 45 minutes away from Kempegowda International Airport, providing easy access for international travelers and business ventures. Moreover, KWIN City is well-connected via major highways and rail routes, ensuring seamless transportation and connectivity to other parts of the region and beyond. This strategic location enhances both its accessibility and its potential for future economic and technological growth.</p>
 </section>
 
 <footer>
