--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h2>City Map</h2>
     <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
     <div class="map-container">
-        <img src="path_to_your_image.png" alt="KWIN City Map">
+        <img src="https://ibb.co/L86Dbtq.png" alt="KWIN City Map">
     </div>
 </section>
 
