--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 <section id="city-map">
     <h2>City Map</h2>
     <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
-    <div class="map-container">
-        <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="KWIN City Map">
-    </div>
+    <div style="margin-bottom: 1.5rem;">
+            <img src="https://i.ibb.co/W6FNqyd/projdaa.png alt="Image Placeholder" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+        </div>
 </section>
 
 <!-- Course Highlights Section -->
