--- a/index.html
+++ b/index.html
@@ -16,78 +16,6 @@
             }
         }
     </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-
-        header {
-            background-color: #007BFF;
-            color: white;
-            padding: 20px 10px;
-            text-align: center;
-        }
-
-        h1, h2, h3, h4 {
-            margin: 10px 0;
-        }
-
-        .button {
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin: 10px;
-        }
-
-        .button:hover {
-            background-color: #0056b3;
-        }
-
-        section {
-            padding: 20px;
-            margin: 20px;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-
-        th, td {
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f4f4f4;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #007BFF;
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
 </head>
 <body>
 
@@ -174,8 +102,28 @@
     </table>
 </section>
 
+<!-- City Map Section -->
+<section id="city-map">
+    <h2>City Map</h2>
+    <p>Explore the districts of KWIN City, designed for knowledge, innovation, and growth.</p>
+    <div style="margin-bottom: 1.5rem;">
+        <img src="https://i.ibb.co/W6FNqyd/projdaa.png" alt="Image Placeholder" style="width: 100%; max-width: 600px; height: auto; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);">
+    </div>
+</section>
+
+<!-- Team Members Section -->
+<section>
+    <h2>Team Members</h2>
+    <ul>
+        <li>Vishal U Hosur</li>
+        <li>Varun S Terdal</li>
+        <li>Suleman A</li>
+        <li>Saif Ali</li>
+    </ul>
+</section>
+
 <footer>
-    <p>&copy; 2024 KWIN City | Designed by Varun S Terdal</p>
+    <p>&copy; 2024 KWIN City | Designed by Students of KLE Technological University</p>
 </footer>
 
 </body>
