--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
 <!-- Buttons to show more info -->
 <button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
 <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
+<button class="button" onclick="toggleInfo('more-info')">Click More</button>
 
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
     <h2>Course Introduction</h2>
-    <p>Design and Analysis of Algorithms course helped us to learn how to solve problems that are seen around us in smart and efficient ways. It focuses on how to design algorithms for different problems and how to make sure that the provided solutions work well and quickly. Starting with basic ideas and moving to advanced concepts, the course helps us understand, analyze, and create algorithms that are both correct and fast.<br></p>
+    <p>Design and Analysis of Algorithms course helped us to learn how to solve problems that are seen around us in smart and efficient ways. It focuses on how to design algorithms for different problems and how to make sure that the provided solutions work well and quickly. Starting with basic ideas and moving to advanced concepts, the course helps us understand, analyze, and create algorithms that are both correct and fast.</p>
     
     <h3>Data Structures and Algorithms Studied So Far:</h3>
     <ul>
@@ -100,6 +101,16 @@
             </tr>
         </tbody>
     </table>
+</section>
+
+<!-- More Info Section -->
+<section id="more-info" style="display:none;">
+    <h2>More Information</h2>
+    <h3>About KWIN City</h3>
+    <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
+    
+    <h3>Strategic Location</h3>
+    <p>KWIN City enjoys a prime location that makes it an ideal hub for growth and development. It is conveniently located just 45 minutes away from Kempegowda International Airport, providing easy access for international travelers and business ventures. Moreover, KWIN City is well-connected via major highways and rail routes, ensuring seamless transportation and connectivity to other parts of the region and beyond.</p>
 </section>
 
 <!-- City Map Section -->
