--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 <!-- Buttons to show more info -->
 <button class="button" onclick="toggleInfo('course-intro')">Course Introduction</button>
 <button class="button" onclick="toggleInfo('business-ideas')">Business Ideas</button>
-<button class="button" onclick="toggleInfo('more-info')">Click More</button>
-
 <!-- Course Introduction Section -->
 <section id="course-intro" style="display:none;">
     <h2>Course Introduction</h2>
@@ -104,9 +102,9 @@
 </section>
 
 <!-- More Info Section -->
-<section id="more-info" style="display:none;">
-    <h2>More Information</h2>
-    <h3>About KWIN City</h3>
+
+   <section id="More Information">
+    <h2>About KWIN City</h2>
     <p>Our city is designed for a brighter tomorrow. Every step you take here leads to opportunities, learning, and innovation. KWIN City emphasizes eco-friendly and people-centric designs while focusing on collaboration and coexistence. It empowers its residents through technology and innovation to help create a sustainable future.</p>
     
     <h3>Strategic Location</h3>
